yaml-templates/ingress-customdomain-http-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-customdomain-http
  namespace: $KUBERNETES_NAMESPACE
spec:
  rules:
  - host: $MYAPP.$CUSTOM_DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetesnodeapp
            port:
              number: 3000
