yaml-templates/ingress-ibmdomain-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-ibmdomain-http-and-https
  namespace: $KUBERNETES_NAMESPACE
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
spec:
  tls:
  - hosts:
    -  $MYPROJECT.$INGRESS_SUBDOMAIN
    secretName: $INGRESS_SECRET_NAME
  rules:
  - host: $MYPROJECT.$INGRESS_SUBDOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetesnodeapp
            port:
              number: 3000
