yaml-templates/ingress-ibmsubdomain-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-ibmsubdomain-http-and-https
  namespace: $KUBERNETES_NAMESPACE
spec:
  tls:
  - hosts:
    -  $MYAPP.$INGRESS_SUBDOMAIN
    secretName: $INGRESS_SECRET_NAME
  rules:
  - host: $MYAPP.$INGRESS_SUBDOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetesnodeapp
            port:
              number: 3000
